--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- stylesheets -->
     <link rel="stylesheet" media="screen" href="http://netdna.bootstrapcdn.com/bootswatch/3.0.3/united/bootstrap.min.css">
-    <link rel="stylesheet" href="css/jquery.signaturepad.css">
-    <link rel="stylesheet" media="css/screen" href="main.css">
+    <link rel="stylesheet" href="jquery.signaturepad.css">
+    <link rel="stylesheet" media="screen" href="main.css">
     <!-- scripts -->
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-    <script src="js/jquery.signaturepad.min.js"></script>
-    <script src="js/json2.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="jquery.signaturepad.min.js"></script>
+    <script src="json2.min.js"></script>
+    <script src="main.js"></script>
   </head>
   <body>
     <div class="container">
