--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Why sign a NDA?</h1>
+      <h1>Why sign a NDA ..</h1>
       <p class="lead">When you can just Pinky Swear instead?</p>
       <center>
       <form method="post" action="" class="sigPad">
