--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Why sign a NDA ..</h1>
+      <h1>Why sign an NDA ..</h1>
       <p class="lead">When you can just Pinky Swear instead?</p>
       <center>
       <form method="post" action="" class="sigPad">
@@ -36,6 +36,6 @@
       <br>
     </div>
     <br>
-    <h4>Directions: When asked to sign a NDA, send <a href="https://github.com/mjhea0/pinky-promise/blob/master/example.png">this</a> instead.</h4>
+    <h4>Directions: When asked to sign an NDA, send <a href="https://github.com/mjhea0/pinky-promise/blob/master/example.png">this</a> instead.</h4>
   </body>
 </html>
