--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
     <title>Pinky Promise</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- stylesheets -->
-    <link rel="stylesheet" media="screen" href="http://netdna.bootstrapcdn.com/bootswatch/3.0.3/united/bootstrap.min.css">
+    <link rel="stylesheet" media="screen" href="https://netdna.bootstrapcdn.com/bootswatch/3.0.3/united/bootstrap.min.css">
     <link rel="stylesheet" href="css/jquery.signaturepad.css">
     <link rel="stylesheet" media="screen" href="css/main.css">
     <!-- scripts -->
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     <script src="js/jquery.signaturepad.min.js"></script>
     <script src="js/json2.min.js"></script>
     <script src="js/main.js"></script>
